<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.nbauma109</groupId>
  <artifactId>io.github.nbauma109.ecd</artifactId>
  <version>2026.3.5</version>
  <packaging>pom</packaging>

  <name>io.github.nbauma109.ecd</name>
  <url>https://github.com/nbauma109/ecd</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <tycho.version>5.0.2</tycho.version>
    <signing.disabled>true</signing.disabled>
    <signing.keystore></signing.keystore>
    <signing.storetype>PKCS12</signing.storetype>
    <signing.alias></signing.alias>
    <signing.storepass></signing.storepass>
    <sonar.projectKey>nbauma109_ecd</sonar.projectKey>
    <sonar.organization>nbauma109</sonar.organization>
  </properties>

  <modules>
    <module>io.github.nbauma109.decompiler</module>
    <module>io.github.nbauma109.decompiler.tests</module>
    <module>io.github.nbauma109.decompiler.feature</module>
    <module>io.github.nbauma109.decompiler.source.attach</module>
    <module>io.github.nbauma109.decompiler.source.attach.tests</module>
    <module>io.github.nbauma109.decompiler.source.feature</module>
    <module>io.github.nbauma109.decompiler.repository</module>
  </modules>

  <scm>
    <connection>scm:git:https://github.com/nbauma109/ecd.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/nbauma109/ecd.git</developerConnection>
    <url>https://github.com/nbauma109/ecd</url>
    <tag>HEAD</tag>
  </scm>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-p2-director-plugin</artifactId>
          <version>${tycho.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-surefire-plugin</artifactId>
        <version>${tycho.version}</version>
        <configuration>
          <useUIHarness>true</useUIHarness>
          <useUIThread>true</useUIThread>
          <application>org.eclipse.ui.ide.workbench</application>
          <argLine>${tycho.testArgLine} -Djava.awt.headless=false</argLine>
          <showEclipseLog>true</showEclipseLog>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-compiler-plugin</artifactId>
        <version>${tycho.version}</version>
      </plugin>

      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-maven-plugin</artifactId>
        <version>${tycho.version}</version>
        <extensions>true</extensions>
      </plugin>

      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>target-platform-configuration</artifactId>
        <version>${tycho.version}</version>
        <configuration>
          <environments>

            <!-- Windows (32bit and 64bit) -->
            <environment>
              <os>win32</os>
              <ws>win32</ws>
              <arch>x86</arch>
            </environment>
            <environment>
              <os>win32</os>
              <ws>win32</ws>
              <arch>x86_64</arch>
            </environment>

            <!-- Linux (GTK) (32bit and 64bit) -->
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86</arch>
            </environment>
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86_64</arch>
            </environment>

            <!-- MacOSX (Intel 32bit/64bit and ARM64) -->
            <environment>
              <os>macosx</os>
              <ws>cocoa</ws>
              <arch>x86</arch>
            </environment>
            <environment>
              <os>macosx</os>
              <ws>cocoa</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>macosx</os>
              <ws>cocoa</ws>
              <arch>arm64</arch>
            </environment>
          </environments>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jarsigner-plugin</artifactId>
        <version>3.1.0</version>
        <configuration>
          <keystore>${signing.keystore}</keystore>
          <storetype>${signing.storetype}</storetype>
          <alias>${signing.alias}</alias>
          <storepass>${signing.storepass}</storepass>
          <verbose>true</verbose>
          <certs>true</certs>
          <removeExistingSignatures>true</removeExistingSignatures>
        </configuration>
        <executions>
          <execution>
            <id>sign</id>
            <phase>package</phase>
            <goals>
              <goal>sign</goal>
            </goals>
            <configuration>
              <skip>${signing.disabled}</skip>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.14</version>
        <executions>
          <execution>
            <id>merge-all</id>
            <phase>verify</phase>
            <goals>
              <goal>merge</goal>
            </goals>
            <configuration>
              <fileSets>
                <fileSet>
                  <directory>${project.basedir}</directory>
                  <includes>
                    <include>**/*.exec</include>
                  </includes>
                </fileSet>
              </fileSets>
            </configuration>
          </execution>
          <execution>
            <id>report-aggregate</id>
            <phase>verify</phase>
            <goals>
              <goal>report-aggregate</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>eclipse-2026-03</id>
      <layout>p2</layout>
      <url>https://download.eclipse.org/releases/2026-03/</url>
    </repository>
    <repository>
      <id>jitpack</id>
      <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>intellij</id>
      <url>https://www.jetbrains.com/intellij-repository/releases/</url>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>2.22.0</version>
      </dependency>
      <dependency>
        <groupId>io.github.nbauma109</groupId>
        <artifactId>transformer-api</artifactId>
        <version>4.2.3</version>
      </dependency>
      <dependency>
        <groupId>com.eclipsesource.minimal-json</groupId>
        <artifactId>minimal-json</artifactId>
        <version>0.9.5</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
</project>
